--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     </section>
 
-    <section class="pbmc-about-area pt-md-5 section-padding-100-0">
+    <section class="pbmc-about-area pt-md-1 section-padding-100-0">
         <div class="hotel-search-form-area">
             <div class="container-fluid">
                 <div class="">
@@ -227,7 +227,7 @@
             </div>
         </div>
 
-        <div class="container mt-md-5 mt-100">
+        <div class="container mt-md-3 mt-100">
             <div class="row align-items-center mb-40">
                 <div class="col-12 col-lg-12">
                     <div class="section-heading wow fadeInUp text-center mb-0" data-wow-delay="100ms">
@@ -266,22 +266,25 @@
                                 </div>
                             </div>
                         </a>
-
-                        <div class="single-project-slide bg-img" style="background-image: url(img/city/3.jpg)">
-                            <div class="project-content">
-                                <div class="text">
-                                    <h5>Online Services</h5>
+                        <a href="online_Services.html">
+                            <div class="single-project-slide bg-img" style="background-image: url(img/city/3.jpg)">
+                                <div class="project-content">
+                                    <div class="text">
+                                        <h5>Online Services</h5>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
-                        <div class="single-project-slide bg-img" style="background-image: url(img/city/4.jpg)">
-                            <div class="project-content">
-                                <div class="text">
-                                    <h5>Census</h5>
+                        <a href="census.html">
+                            <div class="single-project-slide bg-img" style="background-image: url(img/city/4.jpg)">
+                                <div class="project-content">
+                                    <div class="text">
+                                        <h5>Census</h5>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
